Updated after code review.
Signed-off-by: Jan Gustafsson <jannegpriv@gmail.com>